# unece-units

./: .gitignore  README.md
.github/workflows/: ci-cd.yml  dotnet-tests.yml  publish.yml  pull.yml  push.yml  python-tests.yml
.run/: parser.run.xml
dotnet/UneceGenerator/: Directory.Build.props  README.md  UneceGenerator.sln  UneceGenerator.sln.DotSettings
dotnet/UneceGenerator/.run/: UneceGenerator.run.xml
dotnet/UneceGenerator/UneceGenerator/: Generator.cs  Program.cs  README.md  UneceGenerator.csproj
dotnet/UneceGenerator/UneceUnits/: README.md  UneceUnits.csproj  Unit.cs  UnitValue.cs  Units.cs  Units.g.cs
dotnet/UneceGenerator/UneceUnits.Contract/: ConversionException.cs  ConvertibleUnit.cs  README.md  UneceUnits.Contract.csproj  Unit.cs  UnitValue.cs
dotnet/UneceGenerator/UneceUnits.Tests/: Integration.cs  UneceUnits.Tests.csproj  UnitValueTest.cs  UnitsTest.cs
python/src/unece_excel_parser/: README.md  normal.py  out.json  parsedUneceUnits.json  pyproject.toml  unece_excel_parser.py
python/src/unece_excel_parser/files/: rec20_Rev17e-2021.xlsx  rec21_Rev12e_Annex-V-VI_2021.xls
python/src/unece_excel_parser/lib/: category.py  constants.py  conversion_factor.py  normalizer.py  pint_registry.py  state.py  unit.py  units_analyzer.py
python/tests/: test_normalizer.py
python/tests/unece_excel_parser/: constants.py  test_assert_json_changes_commited.py  test_category.py  test_conversion_factor.py  test_normalizer.py  test_pint_registry_manager.py  test_state.py  test_unit.py  test_units_analyzer.py
(+5 files in other folders)
